# XPlatform.net

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
Assets/docs/: Functions.md  Types.md  Wiki.md  examples.md
Assets/docs/examples/: SSLSocketCreation.md  TCPSocketCreation.md  UDPSocketCreation.md
include/XPlatform.net/: IPEndPoint.h  Net.h  XP_ISocket.h  XP_IUdpSocket.h
include/XPlatform.net/SSL/: SSL.h  SSLCtx.h
src/: ext_main.cpp  net.h
src/SSL/: LLApi.cpp
src/SSL/SSLCtx/: SSLCtx.cpp  SSLCtx.h
src/SSL/Sockets/TCPSocket/: TCPSocket.cpp  TCPSocket.h
src/SSL/Sockets/TCPSocketv6/: TCPSocketv6.cpp  TCPSocketv6.h
src/Sockets/TCPSocket/: TCPSocket.cpp  TCPSocket.h
src/Sockets/TCPSocketv6/: TCPSocketv6.cpp  TCPSocketv6.h
src/Sockets/UDPSocket/: UDPSocket.cpp  UDPSocket.h
src/Sockets/UDPSocket6/: UDPSocketv6.cpp  UDPSocketv6.h
